--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-Hans">
 <link rel="stylesheet" href="./style.css">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>我的画板</title>
 
   <canvas id="xxx" width=300 height=300></canvas>
@@ -9,7 +10,7 @@
     <button id=eraser>橡皮擦</button>
     <button id=brush>画笔</button>
   </div>
-  <script src="./main.js"></script>>
+  <script src="./main.js"></script>
 
 
 </html>
