更新画笔颜色

--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 
   <canvas id="xxx" width=300 height=300></canvas>
   <div id=actions class="actions">
-    <button id=eraser>橡皮擦</button>
-    <button id=brush>画笔</button>
+  	<svg id=pen class="icon active">
+     <use xlink:href="#icon-pen"></use>
+    </svg>
+    <svg id=eraser class="icon">
+     <use xlink:href="#icon-Eraser-Tool"></use>
+    </svg>
   </div>
+  <ol class="colors">
+  	<li id="red" class="red active"></li>
+  	<li id="green" class="green"></li>
+    <li id="blue" class="blue"></li>
+  </ol>
   <script src="./main.js"></script>
+  <script src="//at.alicdn.com/t/font_1103138_svjm35gqf69.js"></script>
 
 
 </html>
