--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
     <svg id=eraser class="icon">
      <use xlink:href="#icon-Eraser-Tool"></use>
     </svg>
+    <svg id=clear class="icon">
+     <use xlink:href="#icon-clear"></use>
+    </svg>
+    <svg id=download class="icon">
+     <use xlink:href="#icon-save"></use>
+    </svg>
   </div>
   <ol class="colors">
-  	<li id="red" class="red active"></li>
+  	<li id="black" class="black active"></li>
+  	<li id="red" class="red"></li>
   	<li id="green" class="green"></li>
     <li id="blue" class="blue"></li>
   </ol>
+  <ol class="sizes">
+  	<li id="thin" class="thin"></li>
+  	<li id="thick" class="thick"></li>
+  </ol>
+
   <script src="./main.js"></script>
-  <script src="//at.alicdn.com/t/font_1103138_svjm35gqf69.js"></script>
+  <script src="//at.alicdn.com/t/font_1103138_rw0vjdaec1h.js"></script>
 
 
 </html>
